# pargo

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
src/argus/: __init__.py  run.py  sensor.py  trigger_condition.py  utils.py  workflow.py
src/argus/argo_types/: events.py  primitives.py  workflows.py
src/argus/cli/: main.py
src/argus/nodes/: foreach.py  init.py  node.py  run.py  step.py  when.py  worker_template.py
src/pargo/: __init__.py  sensor.py  trigger_condition.py  utils.py  workflow.py  workflowgroup.py
src/pargo/argo_types/: cron.py  primitives.py  workflows.py
src/pargo/cli/: main.py
src/pargo/nodes/: foreach.py  import_path.py  node.py  run.py  step.py  when.py  worker_template.py  workflow.py
tests/: conftest.py  test_workflow.py  test_workflowgroup.py  utils.py
tests/cli/: test_main.py
tests/nodes/: test_foreach.py  test_init.py  test_run.py  test_step.py  test_when.py
